<resources>
    <string name="app_name" translatable="false">YunGirl</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>

    <string name="picture_has_save_to">图片已保存至 %s 文件夹</string>
    <string name="share_meizhi_to">分享妹纸到...</string>

    <string name="motto">总有人要成功，为什么不能是我。</string>
    <string name="history_list">往期列表</string>
    <string name="daily">每日资源</string>
    <string name="fuli">福利</string>
    <string name="one">ONE</string>
    <string name="Communicate" translatable="false">YunGirl</string>
    <string name="object">object</string>
    <string name="setting">设置</string>
    <string name="about" translatable="false">关于YunGirl</string>

    <string name="save">保存</string>
    <string name="share">分享</string>

    <string name="refresh">刷新</string>
    <string name="copy">复制链接</string>
    <string name="use_another">从浏览器打开链接</string>
    <string name="date">date</string>

    <string name="left">左</string>
    <string name="right">右</string>

    <string name="one_refresh_hint">未来并不遥远，也许就在明天。</string>
    <string name="one_loadmore_hint">历史已成空，就不要再去追寻了。</string>

    <string name="app_xml">https://github.com/yinyiliang/YunGirl</string>
    <string name="author_github">https://github.com/yinyiliang</string>

    <string name="about_app">这是作者继学习Android以来，第一个比较完善的项目，学习参考了很多前辈们的经验，在此感谢！！特别感谢代码家、drakeet、maoruibin、Hugo Xie等等，以及众多开源项目，开源精神万岁~</string>

    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
</resources>
