<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fuli"
            android:icon="@drawable/ic_photo_blue_grey_300_18dp"
            android:title="@string/fuli"/>
        <item
            android:id="@+id/nav_one"
            android:icon="@drawable/ic_one"
            android:title="@string/one"/>
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_18dp"
                android:title="@string/setting"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_about_18dp"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
